# ov-shared-pointer-fail

./: Dockerfile  build.sh
main/: CMakeLists.txt  main.cc
ovms_plugin_ov/: CMakeLists.txt  ovms_plugin_ov_main.cc  test.py
ovms_plugin_ov/include/: ovms_plugin_ov.h
